--- a/style/_sass/color-scheme.scss
+++ b/style/_sass/color-scheme.scss
@@ -101,7 +101,7 @@ body {
 }
 
 .status {
-  background-color: $section-speaking;
+  background-color: #555;
 }
 
 
