--- a/style/_sass/content-list.scss
+++ b/style/_sass/content-list.scss
@@ -129,7 +129,6 @@
     color: #fff;
     padding: 0px 5px;
     display: block;
-    border-radius: 2px;
   }
 
   .location {
